# fast-wasm-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  test.sh
.github/workflows/: main.yml  test.yml
benchmark/: bench.js  package.json
benchmark/testdata/: sample.html
src/: scraper.rs
tests/: scraper_tests.rs
