[package]
name = "fast-wasm-scraper"
version = "0.0.1"
authors = ["julius turunen"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.69"
scraper = "0.12.0"
ego-tree = "0.6.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
